{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 39,
  "lineage": "808ad2dc-c51c-8010-2d54-9b7968175949",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193828881071:vpc/vpc-f723508d",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-73125e1f",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-27b7aa5c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f723508d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-6ab84614",
            "owner_id": "193828881071",
            "state": "available"
          }
        }
      ]
    },
    {
      "module": "module.msk_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:193828881071:security-group/sg-044852034fbf37fc0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-044852034fbf37fc0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2181
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9092
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9094
              }
            ],
            "name": "hp-cluster-20210915161603422700000001",
            "name_prefix": "hp-cluster-",
            "owner_id": "193828881071",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost Center": "1495",
              "Environment": "OCS",
              "Name": "hp-cluster-sg",
              "Owner": "Humberto Pombo"
            },
            "tags_all": {
              "Cost Center": "1495",
              "Environment": "OCS",
              "Name": "hp-cluster-sg",
              "Owner": "Humberto Pombo"
            },
            "timeouts": null,
            "vpc_id": "vpc-f723508d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "module": "module.msk_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "msk-plain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9092,
            "id": "sgrule-1236296915",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-044852034fbf37fc0",
            "self": true,
            "source_security_group_id": "sg-044852034fbf37fc0",
            "to_port": 9092,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.msk_cluster.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.msk_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "msk-tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 9094,
            "id": "sgrule-2643655210",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-044852034fbf37fc0",
            "self": true,
            "source_security_group_id": "sg-044852034fbf37fc0",
            "to_port": 9094,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.msk_cluster.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.msk_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "zookeeper",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2181,
            "id": "sgrule-457438944",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-044852034fbf37fc0",
            "self": true,
            "source_security_group_id": "sg-044852034fbf37fc0",
            "to_port": 2181,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected",
            "module.msk_cluster.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}